--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ body {
   gap: .8rem;
   width: 25rem;
   padding: 2rem;
-  margin: 10% auto;
+  margin: 10rem auto;
   border-radius: .8rem;
   background-color: #e93831;
 }
@@ -33,6 +33,8 @@ body {
 .card > input {
   background-color: #121212;
   color: #f0ffff;
+}.card > input::placeholder {
+  text-align: center;
 }
 .card > button {
   letter-spacing: .1rem;
@@ -43,4 +45,17 @@ body {
 .card > button:active {
   background-color: #d8d8d8;
   box-shadow: .1rem .1rem 1rem #d8d8d8;
+}
+@media (max-width: 440px) {
+  .card{
+    width: 22.5rem;
+  }
+}
+@media (max-width: 390px) {
+  .card{
+    width: 20rem;
+  }
+  .card > input {
+    font-size: .71rem;
+  }
 }
